Fixed: First-run page content is clipped if window width is small

--- a/chrome/skin/subscriptionSelection.css
+++ b/chrome/skin/subscriptionSelection.css
@@ -36,6 +36,12 @@ dialog[newInstall]
   background-position: 95% 5%;
 }
 
+dialog[newInstall] .dialog-content-box,
+dialog[newInstall] #content-scroll
+{
+  min-height: 150px;
+}
+
 #description-newInstall,
 #adblock-warning,
 #filtersetg-warning
